# python-tutorials

./: README.md
fastapi/: README.md  pyproject.toml  shortener.db
fastapi/shortener_app/: README.md  config.py  crud.py  database.py  database_queries.py  keygen.py  main.py  models.py  schemas.py
fastapi/tests/: test_keygen.py  test_main.py
logging/: README.md  logger.conf  logger.yaml  pyproject.toml
logging/logging/: conf_logger.py  custom_logger.py  import_logger.py  root_logger.py  yaml_logger.py
sql_alchemy/: books.db  pyproject.toml
sql_alchemy/sql_alchemy/: main.py
