[tool.poetry]
name = "sql-alchemy"
version = "0.1.0"
description = ""
authors = ["Alex Wendland <a.p.wendland@gmail.com>"]
readme = "README.md"
packages = [{include = "sql_alchemy"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
